# TCC-Estatistica

Volatilidade_Benchmark_Completo/: rv_benchmark_consenso.parquet
Volatilidade_Benchmark_Completo/RV_1min/: rv_daily.parquet  statistics.txt
Volatilidade_Benchmark_Completo/RV_2min/: rv_daily.parquet  statistics.txt
Volatilidade_Benchmark_Completo/RV_30s/: rv_daily.parquet  statistics.txt
analise_inicial/: analise_5m.py  resultados_estatisticos.txt
arma_garch_cv/: Cargo.toml  DESCRIPTION  compile_err.txt  compile_errors.txt  pyproject.toml
arma_garch_cv/src/: forecast.rs  lib.rs  main.rs  progress.rs  py_bridge.rs  r_bridge.rs  spec.rs
arma_garch_cv/src/cv/: metrics.rs  mod.rs  purged.rs
arma_garch_cv/src/distributions/: mod.rs  normal.rs
arma_garch_cv/src/estimation/: likelihood.rs  mod.rs  solver.rs
capitulos/: cap4_resultados_discussao.tex  cap5_conclusao.tex
dados_baixados/: BTCUSDT_dollar_bars_15m.parquet  BTCUSDT_dollar_bars_1h.parquet  BTCUSDT_dollar_bars_24h.parquet  BTCUSDT_time_bars_15m.parquet  BTCUSDT_time_bars_1h.parquet  BTCUSDT_time_bars_24h.parquet  BTCUSDT_volume_bars_15m.parquet  BTCUSDT_volume_bars_1h.parquet  BTCUSDT_volume_bars_24h.parquet
instrucoes/: i01.md
meu_tcc_latex/: build_log.txt  main.aux  main.bbl  main.blg  main.brf  main.fdb_latexmk  main.fls  main.lof  main.lot  main.tex  main.toc  pdflatex_out.txt  preamble.tex  references.bib
meu_tcc_latex/assets/: lembranca.txt
modelagem/: config.py  cpcv.py  main.py  metricas.py  modelo_arima_garch.py  yang_zhang.py
relatorios/: implementation_plan.md
(+37 files in other folders)
